# isnad2network

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  isnad2network_cli.py  pyproject.toml  requirements-file.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_text.yml
data/: names.csv  nodelist.csv  pathmetadata.csv  transmissionterms.csv
docs/: api.md  usage.md
examples/: basic_pipeline.py  installation-script.sh
isnad2network/: __init__.py  __main__.py  dict_creator.py  generate_json_network_isnad.py
notebooks/: isnad2network_colab.ipynb
src/: 2dict.py  __main__.py  isnad2network_cli.py  match_replace_isnads.py
tests/: __init__.py  test_basic.py
