[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isnad2network"
version = "0.1.0"
description = "Islamic Transmission Chain Analysis Toolkit"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology :: History"
]
requires-python = ">=3.6"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/isnad2network"
"Bug Tracker" = "https://github.com/yourusername/isnad2network/issues"

[project.scripts]
isnad2network = "isnad2network.isnad2network_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
